<resources>
    <string name="app_name">Seeker for Landing.jobs</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="preference_file_key">preference_file</string>
    <string name="landing_jobs_text">Landing.jobs</string>
    <string name="enter_token">Token</string>
    <string name="btnSkip">Skip</string>
    <string name="noTokenError">No token entered</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_saved_jobs">Saved Jobs</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_exit">Exit</string>
</resources>