<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menuProfile"
        android:title="@string/menu_profile"
        app:showAsAction="never"/>
    <item
        android:icon="@drawable/ic_fav"
        android:id="@+id/menuSaved"
        android:title="@string/menu_saved_jobs"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menuSettings"
        android:title="@string/menu_settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_about"
        android:title="@string/menu_about"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menuExit"
        android:title="@string/menu_exit"
        app:showAsAction="never"/>
</menu>